--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ float_logo: true # true, false (default)
 # blog cover
 cover: "/assets/images/blog-background.jpg"
 
-name: 'Wiebke'
+name: 'Pepper's Pawprint'
 author: 'Wiebke'
 author_image: "/assets/images/author.jpg"
 
