--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,9 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Pepper's Pawprint"
-description: Mein Weg zum Hundetrainer
+title: "Mediator"
+description: > # this means to ignore newlines until "email:"
+   A Jekyll theme - Medium inspired
 
 email: pepperspawprint@gmail.com
 #blog logo
@@ -21,7 +22,7 @@ author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://www.peppers-pawprint.com" # the base hostname & protocol for your site
+url: "http://www.peppers-pawprint.com"
 baseurl: ""
 
 #google_analytics: UA-XXXXX-X
