--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ gems:
 
 # Site settings
 title: "Pepper's Pawprint"
-description: Mein Weg zum Hundetrainer
+# description: Mein Weg zum Hundetrainer
 
 email: pepperspawprint@gmail.com
 #blog logo
