--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ paginate = 10
 paginatePath = "page"
 
 # service plugins
-#googleAnalytics = "UA-154765901-1"
+#googleAnalytics = "XX-XXXXXXXXX-X"
 
 # language support # en / de translations present in i18n
 defaultContentLanguage = "en"           # Default language to use
