--- a/config.toml
+++ b/config.toml
@@ -75,6 +75,7 @@ defaultContentLanguageInSubdir = true
 
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
+  basicCSS = ['bootstrap.4.1.3.min', 'fontawesome.5.2.0']
   customCSS = ['default.css', 'layout.css', 'media-queries.css']      # if ['custom.css'], load '/static/css/custom.css' file
   customJS = []              # if ['custom.js'], load '/static/js/custom.js' file
 
