Added privacy to the config and added the google analytics template

--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,32 @@ defaultContentLanguageInSubdir = true
   priority = 0.5
   filename = "sitemap.xml"
 
+
+# ------------------------------------- #
+# ---- Privacy ------------------------ #
+# ------------------------------------- #
+[privacy]
+  [privacy.disqus]
+    disable = true
+  [privacy.googleAnalytics]
+    anonymizeIP = true
+    disable = false
+    respectDoNotTrack = true
+    useSessionStorage = true
+  [privacy.instagram]
+    disable = true
+    simple = false
+  [privacy.twitter]
+    disable = true
+    enableDNT = false
+    simple = false
+  [privacy.vimeo]
+    disable = true
+    simple = false
+  [privacy.youtube]
+    disable = true 
+    privacyEnhanced = false
+
 # ------------------------------------- #
 # ---- Other Params ------------------- #
 # ------------------------------------- #
