--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # ------------------------------------- #
 # ---- General Settings --------------- #
 # ------------------------------------- #
-baseURL = "https://wiebkem.github.io/peppers-pawprint/"
+baseURL = "https://www.peppers-pawprint.com/"
 title = "Pepper's Pawprint"
 description = "Blog"
 publishDir = "docs"
