--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,8 @@ paginate = 10
 paginatePath = "page"
 
 # service plugins
-googleAnalytics = "UA-154765901-1"
+googleAnalytics = "UA-157451297-1"
+# change the tag in cookies.html functions and custom.js function
 
 # language support # en / de translations present in i18n
 defaultContentLanguage = "en"           # Default language to use
