--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,7 @@ defaultContentLanguageInSubdir = true
   # site info (optional)
   keywords = ["blog", "dogblog","hundeblog"]
   description = "Pepper's Pawprint Blog"
-  siteLogoImage = "images/logo.jpg"     # shown besides logoTitle
+  siteLogoImage = "images/logo.png"     # shown besides logoTitle
   showAuthorCard = false # Whether to show author information below the article
 
   faviconImage = "images/favicon.png"     # shown besides logoTitle
