--- a/config.toml
+++ b/config.toml
@@ -153,6 +153,12 @@ defaultContentLanguageInSubdir = true
   weight = 1    
 
   [[languages.en.menu.main]]
+    name = "Blog"
+    weight = 2
+    identifier = "blog"
+    url = "/posts/"
+
+  [[languages.en.menu.main]]
     name = "About us"
     weight = 10
     identifier = "about"
@@ -192,6 +198,12 @@ defaultContentLanguageInSubdir = true
   cookie_consent_info_url = "de/information/cookies/"
   copyright = ""
   weight = 2
+
+  [[languages.de.menu.main]]
+    name = "Blog"
+    weight = 2
+    identifier = "blog"
+    url = "/posts/"
 
   [[languages.de.menu.main]]
     name = "Über uns"
