--- a/config.toml
+++ b/config.toml
@@ -104,7 +104,7 @@ defaultContentLanguageInSubdir = true
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
   basicCSS = ['bootstrap.4.1.3.min.css', 'fontawesome.5.2.0.css', 'cookieconsent.min.css']
-  customCSS = ['default.css', 'layout.css', 'media-queries.css']      # if ['custom.css'], load '/static/css/custom.css' file
+  customCSS = ['default.css', 'layout.css']      # if ['custom.css'], load '/static/css/custom.css' file
   basicJS = ['jquery-3.3.1.slim.min.js', 'popper.min.js', 'bootstrap.4.1.3.min.js']
   customJS = ['custom.js']              # if ['custom.js'], load '/static/js/custom.js' file
 
