--- a/config.toml
+++ b/config.toml
@@ -153,16 +153,16 @@ defaultContentLanguageInSubdir = true
   weight = 1 
 
   [[languages.en.menu.main]]
-    name = "Home"
+    name = "Blog"
     weight = 1
     identifier = "home"
     url = "/en/"
 
-  [[languages.en.menu.main]]
-    name = "Blog"
-    weight = 2
-    identifier = "blog"
-    url = "/posts/"
+#  [[languages.en.menu.main]]
+#    name = "Blog"
+#    weight = 2
+#    identifier = "blog"
+#    url = "/posts/"
 
   [[languages.en.menu.main]]
     name = "About us"
@@ -206,16 +206,16 @@ defaultContentLanguageInSubdir = true
   weight = 2
 
   [[languages.de.menu.main]]
-    name = "Home"
+    name = "Blog"
     weight = 1
     identifier = "home"
     url = "/"
 
-  [[languages.de.menu.main]]
-    name = "Blog"
-    weight = 2
-    identifier = "blog"
-    url = "/posts/"
+#  [[languages.de.menu.main]]
+#    name = "Blog"
+#    weight = 2
+#    identifier = "blog"
+#    url = "/posts/"
 
   [[languages.de.menu.main]]
     name = "Über uns"
