--- a/config.toml
+++ b/config.toml
@@ -30,9 +30,9 @@ defaultContentLanguageInSubdir = true
 
 # Links format
 [permalinks]
-  posts = "/posts/:slug/"
-  categories = "/posts/category/:slug/"      # required
-  tags = "/posts/tag/:slug/"                 # required
+  blog = "/blog/:slug/"
+  categories = "/blog/category/:slug/"      # required
+  tags = "/blog/tag/:slug/"                 # required
   pages = "/:slug/"
 
 [author]                     # required
@@ -165,7 +165,7 @@ defaultContentLanguageInSubdir = true
 #    name = "Blog"
 #    weight = 2
 #    identifier = "blog"
-#    url = "/posts/"
+#    url = "/blog/"
 
   [[languages.en.menu.main]]
     name = "About"
@@ -239,7 +239,7 @@ defaultContentLanguageInSubdir = true
 #    name = "Blog"
 #    weight = 2
 #    identifier = "blog"
-#    url = "/posts/"
+#    url = "/blog/"
 
   [[languages.de.menu.main]]
     name = "Über mich"
