--- a/config.toml
+++ b/config.toml
@@ -163,24 +163,10 @@ defaultContentLanguageInSubdir = true
 #    url = "/blog/"
 
   [[languages.en.menu.main]]
-    name = "About"
+    name = "About us"
     weight = 3
     identifier = "about"
-    hasChildren = true
-
-    [[languages.en.menu.main]]
-      parent = "about"
-      name = "Wiebke"
-      weight = 1
-      identifier = "wiebke"
-      url = "/about/wiebke/"
-
-    [[languages.en.menu.main]]
-      parent = "about"
-      name = "Pepper"
-      weight = 2
-      identifier = "pepper"
-      url = "/about/pepper/"
+    url = "/about/"
 
   [[languages.en.menu.social]]
     name = "E-mail"
@@ -237,24 +223,18 @@ defaultContentLanguageInSubdir = true
 #    url = "/blog/"
 
   [[languages.de.menu.main]]
-    name = "Über"
+    name = "Über uns"
     weight = 3
     identifier = "about"
-    hasChildren = true
+#    hasChildren = true
+    url = "/about/"
 
-    [[languages.de.menu.main]]
-      parent = "about"
-      name = "Wiebke"
-      weight = 1
-      identifier = "wiebke"
-      url = "/about/wiebke/"
-
-    [[languages.de.menu.main]]
-      parent = "about"
-      name = "Pepper"
-      weight = 2
-      identifier = "pepper"
-      url = "/about/pepper/"
+#    [[languages.de.menu.main]]
+#      parent = "about"
+#      name = "Über Wiebke"
+#      weight = 1
+#      identifier = "wiebke"
+#      url = "/about/wiebke/"
 
   [[languages.de.menu.social]]
     name = "E-Mail"
