--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -1,14 +1,29 @@
-pepper:
+us:
   enable : true
   item:
     #item loop
+    - title : "Pepper"
+      content : "**Birthday:** 🎂08.04.2009  
+              
+              
+              **Gender:** Male  
+              
+
+              **Breed:** Shepherd-Collie-Mix 🐶"
+      image : "images/about/pepper.jpg"
+
+    #item loop
     - title : "Leisure"
       content : "We started mantrailing at the age of 10 and he loves it! 💞In general, he loves to work with his nose or working together with me. For this reason, we often work with sniff games or we develop new tricks with the clicker.  
-                If Pepper has the opportunity, he also likes to look out of the window. At the moment, all windows in the apartment are a little higher and therefore he uses the balcony. In one of my earlier apartments my bed was in front of the window and, when I was not there, he was sitting comfortably on it and watching the world 😂 (actually he isn't allowed to go on the bed... otherwise I wouldn't have any space for myself🙈)."
-      image : "images/about/pepper.jpg"
+                
+      
+              If Pepper has the opportunity, he also likes to look out of the window. At the moment, all windows in the apartment are a little higher and therefore he uses the balcony. In one of my earlier apartments my bed was in front of the window and, when I was not there, he was sitting comfortably on it and watching the world 😂 (actually he isn't allowed to go on the bed... otherwise I wouldn't have any space for myself🙈)."
+      image : "images/about/pepper2.JPG"
 
     #item loop
     - title : "Characteristics"
       content : "If he got to know and love ❤️ a person, he literally goes crazy when that person visits. The visitor is then greeted wildly and, of course, it will be checked whether the person has something tasty for him.  
-                On a walk, Pepper thinks it's great to roll in the grass 🌿. It became a standard procedure and cannot be left out during every walk."
-      image : "images/about/pepper2.JPG"
+                
+      
+              On a walk, Pepper thinks it's great to roll in the grass 🌿. It became a standard procedure and cannot be left out during every walk."
+      image : "images/about/pepper3.jpg"
