--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -1,19 +1,40 @@
-wiebke:
+us:
   enable : true
   item:
     #item loop
-    - content : "Ich freue mich, dass Du den Weg zu uns gefunden hast! 😃
-                Hier möchte ich Dich an unserem Weg 🛤️ teilhaben lassen und über interessante Themen im Hundealltag 🐶 berichten. Außerdem wirst Du mehr lesen über Reisen mit Hund und warum ich eine Ausbildung zum Hundetrainer 🐕 angefangen habe. Es bleibt also spannend!"
+    - title : "Hej hej, ich bin Wiebke"
+      content : "Schon in meiner Kindheit hatten wir eigentlich immer Hunde zu Hause und seitdem ich 16 Jahre alt bin begleitet mich Pepper.
+          Als ich mit 19 Jahren von zu Hause und damit von Deutschland in die Niederlande zum Studieren gezogen bin, kam er natürlich mit.
+          5 Jahre später ging es dann für meinen Master nach Schweden und momentan lebe ich mit Pepper und meinem Freund wieder in Arnhem in den Niederlanden."
+      image : "images/about/pepper3.jpg"
+
+    #item loop
+    - title : "Ausbildung zur Hundetrainerin"
+      content : "Derzeit absolviere ich eine Ausbildung zur Hundetrainerin und möchte danach Mensch-Hund-Teams zu einem harmonischen Zusammenleben verhelfen.
+          Ich bin gespannt, wohin der Weg führen wird.
+                
+
+          Melde Dich gerne bei Fragen oder Anregungen. Ich freue mich auf Dich!"
+      image : "images/about/pepper2.jpg"
+    
+    #item loop
+    - title : "🐾 Pepper 🐾"
+      content : "**Geburtsdatum:** 🎂08.04.2009  
+                
+                
+          **Geschlecht:** Männlich  
+      
+      
+          **Rasse:** Schäferhund-Collie-Mischling 🐶
+          
+          
+          Eine Eigenheit von Pepper ist es sich im nassen Gras 🌿 zu rollen. 
+          Das ist dann mittlerweile auch Standard und darf bei keinem Spaziergang mehr weggelassen werden."
       image : "images/about/pepper3.jpg"
 
     #item loop
     - title : "Freizeit"
-      content : "Mit seinen 10 Jahren haben wir angefangen mit Mantrailing und er liebt es! 💞Generell findet er es super mit seiner Nase beschäftigt zu sein oder zusammen mit mir zu arbeiten. Aus diesem Grund machen wir z.B. auch oft verschiedene Leckerli Suchspiele oder wir erarbeiten uns neue Tricks mit dem Clicker.  
-                Wenn Pepper die Möglichkeit hat, schaut er auch gerne aus dem Fenster. Im Moment sind die Fenster in der Wohnung alle etwas höher. Dafür ist er aber liebend gern auf dem Balkon. In einer meiner früheren Wohnungen stand mein Bett vor dem Fenster und, wenn ich nicht da war, hat er dort gemütlich gesessen und die Welt beobachtet 😂(eigentlich darf er nämlich nicht ins Bett….sonst hätte ich wohl auch keinen Platz mehr und dürfte in seinem Körbchen schlafen 🙈)."
+      content : "Kurz vor Pepper's 10. Geburtstag haben wir mit Mantrailing angefangen. 
+          Ich finde es eine super Auslastung für einen Hund und Pepper macht es besonders Spaß, da er sehr gerne mit seiner Nase arbeitet. 
+          Aus diesem Grund machen wir z.B. auch oft verschiedene Leckerli Suchspiele oder wir erarbeiten neue Tricks mit dem Clicker 💞"
       image : "images/about/pepper.jpg"
-
-    #item loop
-    - title : "Eigenarten"
-      content : "Wenn er einen Menschen kennen und lieben ❤️ gelernt hat, dann dreht er förmlich durch, wenn dieser zu Besuch kommt. Der Besuch wird dann wild begrüßt und natürlich wird noch eben geschaut, ob dieser auch etwas Leckeres für ihn dabei hat. Besuch auf den er nicht so viel Wert legt, lässt er dann auch gerne mal links liegen.  
-                Außerdem findet Pepper es genial sich auf einem Spaziergang im Gras 🌿 zu rollen. Das ist dann mittlerweile auch Standard und darf bei keinem Spaziergang mehr weggelassen werden."
-      image : "images/about/pepper2.JPG"
