Edited the about page content

--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -10,7 +10,7 @@ us:
 
     #item loop
     - title : "Ausbildung zur Hundetrainerin"
-      content : "Derzeit absolviere ich eine Ausbildung zur Hundetrainerin und möchte danach Mensch-Hund-Teams zu einem harmonischen Zusammenleben verhelfen.
+      content : "Derzeit absolviere ich eine Ausbildung zur Hundetrainerin und möchte danach Mensch-Hund-Teams helfen in Harmonie zusammen zu leben.
           Ich bin gespannt, wohin der Weg führen wird.
                 
 
@@ -28,8 +28,8 @@ us:
           **Rasse:** Schäferhund-Collie-Mischling 🐶
           
           
-          Eine Eigenheit von Pepper ist es sich im nassen Gras 🌿 zu rollen. 
-          Das ist dann mittlerweile auch Standard und darf bei keinem Spaziergang mehr weggelassen werden."
+          Eine Eigenheit von Pepper ist es sich im (nassen) Gras 🌿 zu rollen. 
+          Das ist dann mittlerweile auch Standard und darf bei fast keinem Spaziergang mehr weggelassen werden."
       image : "images/about/pepper3.jpg"
 
     #item loop
