--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -6,7 +6,7 @@ us:
       content : "During my childhood, we always had dogs and since I am 16 years old Pepper accompanies me.
           When I moved from home at the age of 19 and therefore from Germany to the Netherlands to study, Pepper naturally came with me.
           5 years later I went to Sweden for my Master education and at the moment I live with pepper and my boyfriend again in Arnhem in the Netherlands."
-      image : "images/about/pepper3.jpg"
+      image : "images/about/wiebke.jpeg"
 
     #item loop
     - title : "Dog trainer education"
