--- a/config.toml
+++ b/config.toml
@@ -235,3 +235,41 @@ defaultContentLanguageInSubdir = true
     weight = 2
     identifier = "impressum"
     url = "/impressum/"
+
+[languages.nl]
+  languageCode = "nl"
+  languageName = "Nederlands"
+  contentDir = "content/nl"
+  cookie_consent_info_url = "/privacy/"
+  copyright = "All rights reserved."
+  weight = 3 
+
+  [[languages.nl.menu.main]]
+    name = "Blog"
+    weight = 1
+    identifier = "home"
+    url = "/nl/"
+
+#  [[languages.nl.menu.main]]
+#    name = "Blog"
+#    weight = 2
+#    identifier = "blog"
+#    url = "/blog/"
+
+  [[languages.nl.menu.main]]
+    name = "Over ons"
+    weight = 3
+    identifier = "about"
+    url = "/about/"
+
+  [[languages.nl.menu.links]]
+    name = "Privacyverklaring"
+    weight = 1
+    identifier = "privacy"
+    url = "/privacy/"
+
+  [[languages.nl.menu.links]]
+    name = "Imprint"
+    weight = 2
+    identifier = "impressum"
+    url = "/impressum/"
