Updated the config file and the docs folder

--- a/config.toml
+++ b/config.toml
@@ -158,7 +158,7 @@ defaultContentLanguageInSubdir = true
     url = "/posts/"
 
   [[languages.en.menu.main]]
-    name = "About"
+    name = "About us"
     weight = 10
     identifier = "about"
     url = "about/"
