--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ paginatePath = "page"
 googleAnalytics = "UA-157451297-1"
 # change the tag in cookies.html functions and custom.js function
 
-# language support # en / de translations present in i18n
+# language support
 defaultContentLanguage = "en"           # Default language to use
 defaultContentLanguageInSubdir = true
 
