Updated the about section

--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -4,13 +4,13 @@ us:
     #item loop
     - title : "Hej hej, I am Wiebke"
       content : "During my childhood, we always had dogs and since I am 16 years old Pepper accompanies me.
-          When I moved from home at the age of 19 and therefore from Germany to the Netherlands to study, Pepper naturally came with me.
-          5 years later I went to Sweden for my Master education and at the moment I live with pepper and my boyfriend again in Arnhem in the Netherlands."
+          When I moved from home at the age of 19 and therefore from Germany to the Netherlands to study, Pepper naturally joined me.
+          5 years later I went to Sweden for my Master education and at the moment I live with Pepper and my boyfriend again in the Netherlands."
       image : "images/about/wiebke.jpeg"
 
     #item loop
     - title : "Dog instructor education"
-      content : "Currently, I am following an education as a dog instructor and afterwards I want to help human-dog-teams to live together in harmony. 
+      content : "Currently, I am following an education as a dog instructor and afterwards I want to help human-dog-teams. 
           I am excited where the way is leading.
 
 
