--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -4,13 +4,13 @@ us:
     #item loop
     - title : "Hej hej, ich bin Wiebke"
       content : "Schon in meiner Kindheit hatten wir eigentlich immer Hunde zu Hause und seitdem ich 16 Jahre alt bin begleitet mich Pepper.
-          Als ich mit 19 Jahren von zu Hause und damit von Deutschland in die Niederlande zum Studieren gezogen bin, kam er natürlich mit.
-          5 Jahre später ging es dann für meinen Master nach Schweden und momentan lebe ich mit Pepper und meinem Freund wieder in Arnhem in den Niederlanden."
+          Als ich mit 19 Jahren von zu Hause und damit von Deutschland in die Niederlande zum Studieren gezogen bin, kam Pepper natürlich mit.
+          5 Jahre später ging es dann für meinen Master nach Schweden und momentan lebe ich mit Pepper und meinem Freund wieder in den Niederlanden."
       image : "images/about/wiebke.jpeg"
 
     #item loop
     - title : "Ausbildung zur Hundetrainerin"
-      content : "Derzeit absolviere ich eine Ausbildung zur Hundetrainerin und möchte danach Mensch-Hund-Teams helfen in Harmonie zusammen zu leben.
+      content : "Derzeit absolviere ich eine Ausbildung zur Hundetrainerin und möchte danach Mensch-Hund-Teams helfen.
           Ich bin gespannt, wohin der Weg führen wird.
                 
 
