--- a/data/nl/about.yml
+++ b/data/nl/about.yml
@@ -4,13 +4,13 @@ us:
     #item loop
     - title : "Hoi, ik ben Wiebke"
       content : "Tijdens mijn jeugd hadden we eigenlijk altijd honden gehad en sinds mijn 16e is Pepper bij mij.
-          Toen ik op 19-jarige leeftijd uit huis hing en dus van Duitsland naar Nederland verhuisde om te studeren, kwam Pepper natuurlijk met mij mee.
-          5 jaar later ging ik voor mijn Masteropleiding naar Zweden en momenteel woon ik met Pepper en mijn vriend weer in Arnhem in Nederland."
+          Toen ik op 19-jarige leeftijd uit huis ging en dus van Duitsland naar Nederland verhuisde om te studeren, kwam Pepper natuurlijk met mij mee.
+          5 jaar later ging ik voor mijn Masteropleiding naar Zweden en tegenwoordig woon ik met Pepper en mijn vriend weer in Nederland."
       image : "images/about/wiebke.jpeg"
 
     #item loop
     - title : "Kynologisch instructeur opleiding"
-      content : "Momenteel volg ik een opleiding tot kynologisch instructeur en daarna wil ik mens-hond-teams helpen om in harmonie samen te leven.
+      content : "Momenteel volg ik een opleiding tot kynologisch instructeur en daarna wil ik mens-hond-teams helpen.
           Ik ben benieuwd waar de weg naartoe leidt.
           
           
