--- a/data/de/home.yml
+++ b/data/de/home.yml
@@ -1,7 +1,7 @@
 enable : true
 title : "Willkommen bei Pepper's Pawprint"
-content : "I am glad that you have found us! 😃
-
-  Here I would like to let you participate in our journey 🛤️ and to report on interesting topics in everyday dog life 🐶. 
-  You will also read more about traveling with a dog and why I started a dog trainer education 🐕. Stay tuned!"
+content : "Herzlich Willkommen auf meinem Blog. Ich freue mich, dass Du den Weg zu uns gefunden hast 😃
+  Auf dieser Seite möchte ich Dich an unserem Weg teilhaben lassen und über interessante Themen im Hundealltag 
+  sowie Beschäftigungsideen berichten. Außerdem wirst Du mehr über unsere gemeinsamen Reisen und meine Hundetrainerausbildung 🐕 lesen. 
+  Es bleibt also spannend! Viel Spaß beim Lesen 🐾"
 image : "images/about/wiebke.jpeg"
