Updated the home content in all languages

--- a/data/de/home.yml
+++ b/data/de/home.yml
@@ -1,6 +1,6 @@
 enable : true
 title : "Willkommen bei Pepper's Pawprint"
-content : "Herzlich Willkommen auf meinem Blog. Ich freue mich, dass Du den Weg zu uns gefunden hast 😃
+content : "Herzlich Willkommen auf meinem Blog! Ich freue mich, dass Du den Weg zu uns gefunden hast 😃
   Auf dieser Seite möchte ich Dich an unserem Weg teilhaben lassen und über interessante Themen im Hundealltag 
   sowie Beschäftigungsideen berichten. Außerdem wirst Du mehr über unsere gemeinsamen Reisen und meine Hundetrainerausbildung 🐕 lesen. 
   Es bleibt also spannend! Viel Spaß beim Lesen 🐾"
