--- a/data/nl/home.yml
+++ b/data/nl/home.yml
@@ -1,7 +1,7 @@
 enable : true
 title : "Welkom bij Pepper's Pawprint"
-content : "I am glad that you have found us! 😃
-
-  Here I would like to let you participate in our journey 🛤️ and to report on interesting topics in everyday dog life 🐶. 
-  You will also read more about traveling with a dog and why I started a dog trainer education 🐕. Stay tuned!"
+content : "Welkom op mijn blog! Leuk dat je ons hebt gevonden 😃 
+  Op deze pagina wil ik ons pad, interessante onderwerpen in het dagelijkse hondenleven als ook hersenwerk ideeën delen. 
+  Ook lees je meer over onze reizen samen en mijn kynologisch instructeur opleiding  🐕. 
+  Het blijft dus spannend! Veel plezier 🐾"
 image : "images/about/wiebke.jpeg"
