--- a/data/en/home.yml
+++ b/data/en/home.yml
@@ -1,7 +1,7 @@
 enable : true
 title : "Welcome to Pepper's Pawprint"
-content : "I am glad that you have found us! 😃
-
-  Here I would like to let you participate in our journey 🛤️ and to report on interesting topics in everyday dog life 🐶. 
-  You will also read more about traveling with a dog and why I started a dog trainer education 🐕. Stay tuned!"
+content : "Welcome to my blog! I am glad that you have found your way to us 😃 
+  On this page, I would like to share our path with you and report about interesting topics in everyday dog life 
+  as well as enrichment ideas. You will also read more about our trips together and my dog instructor education 🐕. 
+  Stay tuned and enjoy reading 🐾"
 image : "images/about/wiebke.jpeg"
