--- a/data/de/home.yml
+++ b/data/de/home.yml
@@ -1,7 +1,10 @@
 enable : true
-title : "Willkommen bei Pepper's Pawprint"
-content : "Herzlich Willkommen auf meinem Blog! Ich freue mich, dass Du den Weg zu uns gefunden hast 😃
+title : "Herzlich willkommen bei Pepper's Pawprint"
+welcomeContent : "Ich freue mich, dass Du den Weg zu uns gefunden hast 😃
   Auf dieser Seite möchte ich Dich an unserem Weg teilhaben lassen und über interessante Themen im Hundealltag 
   sowie Beschäftigungsideen berichten. Außerdem wirst Du mehr über unsere gemeinsamen Reisen und meine Hundetrainerausbildung 🐕 lesen. 
   Es bleibt also spannend! Viel Spaß beim Lesen 🐾"
+nameContent : "**Warum heißt der Blog Pepper's Pawprint?** Pepper ist mein erster eigener Hund. Ich habe ihn mittlerweile seit 11 Jahren 
+  und wir haben schon viel zusammen erlebt. Pepper hat definitiv seine Spuren, sozusagen seine Pfotenabdrücke, hinterlassen. Durch ihn 
+  habe ich mich entschieden eine Hundetrainerausbildung zu beginnen und ich hoffe, dass wir noch einige Jahre zusammen verbringen dürfen."
 image : "images/about/wiebke.jpeg"
