--- a/data/nl/home.yml
+++ b/data/nl/home.yml
@@ -1,7 +1,10 @@
 enable : true
 title : "Welkom bij Pepper's Pawprint"
-content : "Welkom op mijn blog! Leuk dat je ons hebt gevonden 😃 
+welcomeContent : "Leuk dat je ons hebt gevonden 😃 
   Op deze pagina wil ik ons pad, interessante onderwerpen in het dagelijkse hondenleven als ook hersenwerk ideeën delen. 
   Ook lees je meer over onze reizen samen en mijn kynologisch instructeur opleiding  🐕. 
   Het blijft dus spannend! Veel plezier 🐾"
+nameContent : "**Waarom heet de blog Pepper's Pawprint?** Pepper is mijn eerste eigen hond. Ik heb hem nu 11 jaar en 
+  we hebben samen veel ervaringen gemaakt. Pepper heeft zeker zijn sporen achtergelaten, om zo te zeggen zijn pootafdrukken. 
+  Door hem besloot ik om een opleiding als kynologisch instructeur te beginnen en ik hoop dat we nog vele jaren samen kunnen doorbrengen."
 image : "images/about/wiebke.jpeg"
