Added the responsive image partial

--- a/config.toml
+++ b/config.toml
@@ -98,6 +98,21 @@ defaultContentLanguageInSubdir = true
 
   google_verification = ""  # Google_Verification
 
+
+# ------------------------------------- #
+# ---- Responsive Images -------------- #
+# ------------------------------------- #
+
+  # Highest width is 2500px for landscape and 1500px for portrait.
+  # This will give both orientations roughly the same resolution and size.
+  # Every landscape image will also be scaled down to 1500px and 1000px,
+  # and portrait photos to 1000px and 750px wide.
+  landscapePhotoWidths = [2500, 1500, 1000]
+  portraitPhotoWidths = [1500, 1000, 750]
+
+  [imaging]
+  quality = 70
+
   ############################# social site ########################
   [[params.social]]
   icon = "far fa-envelope"
