Updated the about images

--- a/data/de/home.yml
+++ b/data/de/home.yml
@@ -7,4 +7,4 @@ welcomeContent : "Ich freue mich, dass Du den Weg zu uns gefunden hast 😃
 nameContent : "**Warum heißt der Blog Pepper's Pawprint?** Pepper ist mein erster eigener Hund. Ich habe ihn mittlerweile seit 11 Jahren 
   und wir haben schon viel zusammen erlebt. Pepper hat definitiv seine Spuren, sozusagen seine Pfotenabdrücke, hinterlassen. Durch ihn 
   habe ich mich entschieden eine Hundetrainerausbildung zu beginnen und ich hoffe, dass wir noch einige Jahre zusammen verbringen dürfen."
-image : "images/about/wiebke.jpeg"
+image : "images/about/wiebke.jpg"
