--- a/data/nl/home.yml
+++ b/data/nl/home.yml
@@ -7,4 +7,4 @@ welcomeContent : "Leuk dat je ons hebt gevonden 😃
 nameContent : "**Waarom heet de blog Pepper's Pawprint?** Pepper is mijn eerste eigen hond. Ik heb hem nu 11 jaar en 
   we hebben samen veel ervaringen gemaakt. Pepper heeft zeker zijn sporen achtergelaten, om zo te zeggen zijn pootafdrukken. 
   Door hem besloot ik om een opleiding als kynologisch instructeur te beginnen en ik hoop dat we nog vele jaren samen kunnen doorbrengen."
-image : "images/about/wiebke.jpeg"
+image : "images/about/wiebke.jpg"
