--- a/data/en/home.yml
+++ b/data/en/home.yml
@@ -7,4 +7,4 @@ welcomeContent : "I am glad that you have found your way to us 😃
 nameContent : "**Why is the blog called Pepper's Pawprint?** Pepper is my first dog. I have had him for 11 years now and 
   we have experienced a lot together. Pepper has definitely left his mark, so to speak his paw prints. Because of him 
   I decided to start a dog instructor education and I hope that we have many more years together."
-image : "images/about/wiebke.jpeg"
+image : "images/about/wiebke.jpg"
