--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -50,7 +50,6 @@ education:
       institution : "Kynotrain"
       country: "Niederlande"
       year: "November 2019 - Oktober 2020"
-      image : ""
 
 
 seminars:
@@ -58,7 +57,7 @@ seminars:
   title : "Fortbildung"
   item:
     #item loop
-    - title : "Webinar - Hunde führen"
+    - title : "Webinar - Hunde gelassen führen"
       institution : "The Big Foot Way"
       country: "Deutschland"
       year: "April 2020 - Juni 2020"
